# eval-xrl-goal-identification

./: pyproject.toml  readme.md
explanation_mechanisms/: __init__.py  common.py  dataset.py  dataset_similarity_explanation.py  dqn_train.py  generate_explain_obs.py  mspacman_envs.py  optimal_action_description.py  specific_and_relevant_feature_attribution.py  trd_dqn_train.py  trd_explain.py
explanations /: explain-obs.npz  local-questionnaire.html  optimal_action_explanation.json  script.js  style.css
models/: MsPacman-Dots-v2-autoencoder.weights.h5  MsPacman-EnergyPill-v2-autoencoder.weights.h5  MsPacman-LoseALife-v2-autoencoder.weights.h5  MsPacman-Survival-v2-autoencoder.weights.h5
survey/: analyse_strategy_id_accuracy.ipynb  analyse_user_ratings.ipynb  extract_survey_results.py  qualtrics_create_survey.py  strategy-identification+prolific_20+November+2024_16.12-participants.csv  strategy-identification+prolific_20+November+2024_16.12-strategy-id-answers.csv  strategy-identification-prolific-mechanism-overall-ratings.csv
