[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["explanation_mechanisms"]

[project]
name = "eval-strategy-id"
version = "1.0"
dependencies = [
  "gymnasium[atari,other]>=1.0.0a2",
  "jax[cuda12]",
  "flax",
  "optax",
  "chex",
  "tyro",
  "torch",
  "tensorflow",
  "rich",
  "tqdm",
  "tensorboard",
  "wandb",
  "scikit-learn",
]
requires-python = ">=3.8"
authors = [
  {name = "Mark Towers", email = "mt5g17@soton.ac.uk"},
]

description = "Implementation of explanation mechanisms for a user survey"
readme = "readme.md"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
